--- a/docs/en/getting-started/colab_quickstart.ipynb
+++ b/docs/en/getting-started/colab_quickstart.ipynb
@@ -222,7 +222,8 @@
       },
       "outputs": [],
       "source": [
-        "! curl -O https://storage.googleapis.com/genai-toolbox/v0.4.0/linux/amd64/toolbox\n",
+        "version = \"0.5.0\" # x-release-please-version\n",
+        "! curl -O https://storage.googleapis.com/genai-toolbox/v{version}/linux/amd64/toolbox\n",
         "\n",
         "# Make the binary executable\n",
         "! chmod +x toolbox"
